[gd_scene load_steps=51 format=3 uid="uid://b3f3e2snpptm"]

[ext_resource type="Script" path="res://src/character/actor.gd" id="1_iyd3c"]
[ext_resource type="PackedScene" uid="uid://kr7oxu32ckts" path="res://src/character/components/health_component.tscn" id="2_3lrfi"]
[ext_resource type="SpriteFrames" uid="uid://b1tde2jhy8sfh" path="res://src/character/goblin_0_sprite_frames.tres" id="3_wikbw"]
[ext_resource type="Script" path="res://src/character/target_tracker_component.gd" id="4_xmvxf"]
[ext_resource type="Script" path="res://src/character/state/actor_core.gd" id="5_86qj3"]
[ext_resource type="Script" path="res://src/character/state/state_machine.gd" id="6_prw4o"]
[ext_resource type="Script" path="res://src/character/state/thrown_state.gd" id="7_6uj33"]
[ext_resource type="Script" path="res://src/character/state/neutral_state.gd" id="8_rg5hj"]
[ext_resource type="Script" path="res://src/character/state/idle_state.gd" id="9_rctt1"]
[ext_resource type="Script" path="res://src/character/state/hurt_state.gd" id="10_gc4jp"]
[ext_resource type="Script" path="res://src/character/state/combat_state.gd" id="11_ftupo"]
[ext_resource type="Script" path="res://src/character/state/attack_state.gd" id="12_dvck4"]
[ext_resource type="Script" path="res://src/character/state/navigate_state.gd" id="13_k223q"]
[ext_resource type="Script" path="res://src/character/state/scavange_state.gd" id="14_ipqj8"]
[ext_resource type="Script" path="res://src/character/state/collect_state.gd" id="15_ddid1"]
[ext_resource type="Script" path="res://src/character/state/deliver_scrap_state.gd" id="16_tsv2v"]
[ext_resource type="Script" path="res://src/character/state/follow_state.gd" id="17_7geqr"]
[ext_resource type="Script" path="res://src/character/state/explore_patrol_state.gd" id="18_qq822"]
[ext_resource type="Script" path="res://src/character/state/explore_state.gd" id="19_58wjl"]
[ext_resource type="Script" path="res://src/character/state/auto_idle_state.gd" id="20_rxrmq"]
[ext_resource type="Script" path="res://src/ui/debug/state_debugger.gd" id="21_vbpfc"]
[ext_resource type="PackedScene" uid="uid://cju2eyaufp5xj" path="res://src/ui/HealthBarUI.tscn" id="22_iua3a"]
[ext_resource type="PackedScene" uid="uid://l5vvruq23htq" path="res://src/character/head_glow.tscn" id="23_10j6j"]
[ext_resource type="Script" path="res://src/collectables/CollectorComponent.gd" id="24_aguy6"]
[ext_resource type="Script" path="res://src/ui/debug/debug_velocity_label.gd" id="25_gpsc2"]
[ext_resource type="Script" path="res://src/managers/sfx_manager/sfx_manager.gd" id="26_s051w"]
[ext_resource type="AudioStream" uid="uid://brua1v4kcpsii" path="res://assets/audio/hit1.wav" id="27_57pk2"]
[ext_resource type="AudioStream" uid="uid://bmtftsp36ylhy" path="res://assets/audio/hit2.wav" id="28_1l8pg"]
[ext_resource type="AudioStream" uid="uid://da546wjhxhlu3" path="res://assets/audio/hit3.wav" id="29_03nhi"]
[ext_resource type="AudioStream" uid="uid://c8xb3f18kclth" path="res://assets/audio/hit4.wav" id="30_hb3wq"]
[ext_resource type="AudioStream" uid="uid://dkjbf0o48joj8" path="res://assets/audio/hit5.wav" id="31_kuyka"]
[ext_resource type="AudioStream" uid="uid://bk4du1dxn5ndw" path="res://assets/audio/impact2.wav" id="32_q7syn"]
[ext_resource type="AudioStream" uid="uid://tbb7jegq8jj0" path="res://assets/audio/impact3.wav" id="33_da45x"]
[ext_resource type="AudioStream" uid="uid://caotkgjn2mh4a" path="res://assets/audio/impact4.wav" id="34_4s0e0"]
[ext_resource type="AudioStream" uid="uid://c1ofbot5arfeq" path="res://assets/audio/impact5.wav" id="35_h3253"]
[ext_resource type="AudioStream" uid="uid://b2eyibc2d0xs3" path="res://assets/audio/scrap1.wav" id="36_sm2kp"]
[ext_resource type="AudioStream" uid="uid://b7pki1fq6jsav" path="res://assets/audio/scrap2.wav" id="37_a3q0f"]
[ext_resource type="AudioStream" uid="uid://crus28ps4wj1a" path="res://assets/audio/scrap3.wav" id="38_etny8"]
[ext_resource type="AudioStream" uid="uid://bgd1g0313gmul" path="res://assets/audio/scrap4.wav" id="39_3eu27"]
[ext_resource type="AudioStream" uid="uid://b3bmh4m5a5wfq" path="res://assets/audio/throw1.wav" id="40_faoaw"]
[ext_resource type="AudioStream" uid="uid://tfxp3t1sr3bq" path="res://assets/audio/throw2.wav" id="41_xegbk"]
[ext_resource type="AudioStream" uid="uid://d4ceyrcvkgma1" path="res://assets/audio/throw3.wav" id="42_gcf73"]
[ext_resource type="AudioStream" uid="uid://dga457mlya4h" path="res://assets/audio/throw4.wav" id="43_yh131"]
[ext_resource type="AudioStream" uid="uid://dbuxdutckxwmk" path="res://assets/audio/throw5.wav" id="44_5x6vl"]
[ext_resource type="PackedScene" uid="uid://cnpjlg6u1fhrp" path="res://src/character/ghost.tscn" id="45_i7c1i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1bxck"]
radius = 17.5

[sub_resource type="CircleShape2D" id="CircleShape2D_ueshs"]
radius = 400.0

[sub_resource type="LabelSettings" id="LabelSettings_pthek"]
font_size = 22

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3763u"]
polygon = PackedVector2Array(-26, 109, -12, 115, 14, 115, 28, 111, 24, 122, -23, 121)

[sub_resource type="CircleShape2D" id="CircleShape2D_yrhv1"]
radius = 37.054

[node name="Actor2" type="CharacterBody2D" node_paths=PackedStringArray("player", "sfx_manager") groups=["Actor", "NPC", "Throwable"]]
z_index = 1
y_sort_enabled = true
motion_mode = 1
wall_min_slide_angle = 3.14159
script = ExtResource("1_iyd3c")
player = NodePath(".")
sfx_manager = NodePath("SfxManager")

[node name="HealthComponent" parent="." instance=ExtResource("2_3lrfi")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -2.75)
shape = SubResource("CircleShape2D_1bxck")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
path_desired_distance = 50.0
target_desired_distance = 60.0
path_max_distance = 20.0
avoidance_enabled = true
radius = 30.0
max_speed = 400.0
debug_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -63.75)
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("3_wikbw")
animation = &"run_down"
offset = Vector2(0, -165)

[node name="TargetTrackerComponent" type="Area2D" parent="." node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
visible = false
position = Vector2(0, -63.75)
collision_layer = 0
collision_mask = 257
script = ExtResource("4_xmvxf")
actor = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetTrackerComponent"]
shape = SubResource("CircleShape2D_ueshs")

[node name="ActorCore" type="Node" parent="." node_paths=PackedStringArray("actor", "animated_sprite", "machine")]
unique_name_in_owner = true
script = ExtResource("5_86qj3")
actor = NodePath("..")
animated_sprite = NodePath("../AnimatedSprite2D")
machine = NodePath("StateMachine")

[node name="StateMachine" type="Node" parent="ActorCore"]
script = ExtResource("6_prw4o")

[node name="Thrown" type="Node" parent="ActorCore/StateMachine"]
unique_name_in_owner = true
script = ExtResource("7_6uj33")

[node name="Neutral" type="Node" parent="ActorCore/StateMachine"]
unique_name_in_owner = true
script = ExtResource("8_rg5hj")

[node name="Idle" type="Node" parent="ActorCore/StateMachine/Neutral"]
script = ExtResource("9_rctt1")

[node name="Hurt" type="Node" parent="ActorCore/StateMachine"]
unique_name_in_owner = true
script = ExtResource("10_gc4jp")

[node name="HurtTimer" type="Timer" parent="ActorCore/StateMachine/Hurt"]
wait_time = 0.2

[node name="Combat" type="Node" parent="ActorCore/StateMachine"]
unique_name_in_owner = true
script = ExtResource("11_ftupo")

[node name="Attack" type="Node" parent="ActorCore/StateMachine/Combat"]
script = ExtResource("12_dvck4")

[node name="AttackCooldownTimer" type="Timer" parent="ActorCore/StateMachine/Combat/Attack"]
wait_time = 0.5
one_shot = true

[node name="Navigate" type="Node" parent="ActorCore/StateMachine/Combat" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("13_k223q")
nav_agent = NodePath("../../../../NavigationAgent2D")

[node name="Scavange" type="Node" parent="ActorCore/StateMachine"]
unique_name_in_owner = true
script = ExtResource("14_ipqj8")

[node name="Collect" type="Node" parent="ActorCore/StateMachine/Scavange"]
script = ExtResource("15_ddid1")

[node name="NavigateToNode" type="Node" parent="ActorCore/StateMachine/Scavange" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("13_k223q")
nav_agent = NodePath("../../../../NavigationAgent2D")

[node name="ReturnToBase" type="Node" parent="ActorCore/StateMachine/Scavange"]
script = ExtResource("13_k223q")

[node name="DeliverScrap" type="Node" parent="ActorCore/StateMachine/Scavange"]
script = ExtResource("16_tsv2v")

[node name="Idle" type="Node" parent="ActorCore/StateMachine/Scavange/DeliverScrap"]
script = ExtResource("9_rctt1")

[node name="Follow" type="Node" parent="ActorCore/StateMachine"]
unique_name_in_owner = true
script = ExtResource("17_7geqr")

[node name="Navigate" type="Node" parent="ActorCore/StateMachine/Follow" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("13_k223q")
nav_agent = NodePath("../../../../NavigationAgent2D")

[node name="Idle" type="Node" parent="ActorCore/StateMachine/Follow"]
script = ExtResource("9_rctt1")

[node name="Passive" type="Node" parent="ActorCore/StateMachine"]

[node name="Idle" type="Node" parent="ActorCore/StateMachine/Passive"]

[node name="PatrolAutoAdvance" type="Node" parent="ActorCore/StateMachine"]
unique_name_in_owner = true
script = ExtResource("18_qq822")

[node name="AutoExplore" type="Node" parent="ActorCore/StateMachine/PatrolAutoAdvance"]
script = ExtResource("19_58wjl")

[node name="Navigate" type="Node" parent="ActorCore/StateMachine/PatrolAutoAdvance/AutoExplore" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("13_k223q")
nav_agent = NodePath("../../../../../NavigationAgent2D")

[node name="AutoIdleState" type="Node" parent="ActorCore/StateMachine/PatrolAutoAdvance"]
script = ExtResource("20_rxrmq")

[node name="StateDebugger" type="Label" parent="." node_paths=PackedStringArray("follow_target")]
unique_name_in_owner = true
visible = false
top_level = true
z_index = 1
offset_top = -63.75
offset_right = 246.0
offset_bottom = -32.75
text = "State label default text"
label_settings = SubResource("LabelSettings_pthek")
script = ExtResource("21_vbpfc")
follow_target = NodePath("..")

[node name="HealthBarUi" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("22_iua3a")]
z_index = 1
offset_left = 2.0
offset_top = -163.75
offset_right = 2.0
offset_bottom = -163.75
health_component = NodePath("../HealthComponent")

[node name="Lights" type="Node2D" parent="."]
position = Vector2(0, -119.75)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Lights"]
occluder = SubResource("OccluderPolygon2D_3763u")

[node name="HeadGlowPosi" type="Marker2D" parent="Lights"]
position = Vector2(0, -0.25)

[node name="HeadGlow" parent="Lights/HeadGlowPosi" instance=ExtResource("23_10j6j")]
position = Vector2(1, 1)
scale = Vector2(9.98375, 9.98375)
energy = 0.2

[node name="Collector" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("24_aguy6")

[node name="Label" type="Label" parent="."]
visible = false
offset_top = -63.75
offset_right = 40.0
offset_bottom = -40.75
script = ExtResource("25_gpsc2")

[node name="InteractArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -63.75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
visible = false
position = Vector2(0, 61)
shape = SubResource("CircleShape2D_yrhv1")

[node name="SfxManager" type="AudioStreamPlayer2D" parent="."]
max_distance = 1500.0
script = ExtResource("26_s051w")
bank_names = Array[StringName]([&"hit", &"impact", &"scrap", &"throw", &"empty", &"empty", &"empty", &"empty"])
bank_0 = Array[AudioStream]([ExtResource("27_57pk2"), ExtResource("28_1l8pg"), ExtResource("29_03nhi"), ExtResource("30_hb3wq"), ExtResource("31_kuyka")])
bank_1 = Array[AudioStream]([ExtResource("32_q7syn"), ExtResource("33_da45x"), ExtResource("34_4s0e0"), ExtResource("35_h3253")])
bank_2 = Array[AudioStream]([ExtResource("36_sm2kp"), ExtResource("37_a3q0f"), ExtResource("38_etny8"), ExtResource("39_3eu27")])
bank_3 = Array[AudioStream]([ExtResource("40_faoaw"), ExtResource("41_xegbk"), ExtResource("42_gcf73"), ExtResource("43_yh131"), ExtResource("44_5x6vl")])

[node name="Ghost" parent="." instance=ExtResource("45_i7c1i")]
position = Vector2(0, -165)
